@@ -438,12 +438,14 @@ public final class CombinedFieldQuery extends Query implements Accountable {
     private final DisiPriorityQueue queue;
     private final DocIdSetIterator iterator;
     private final MultiNormsLeafSimScorer simScorer;
+    private final float maxScore;
 
     CombinedFieldScorer(
         DisiPriorityQueue queue, DocIdSetIterator iterator, MultiNormsLeafSimScorer simScorer) {
       this.queue = queue;
       this.iterator = iterator;
       this.simScorer = simScorer;
+      this.maxScore = simScorer.getSimScorer().score(Float.POSITIVE_INFINITY, 1L);
     }
 
     @Override
@@ -475,7 +477,7 @@ public final class CombinedFieldQuery extends Query implements Accountable {
 
     @Override
     public float getMaxScore(int upTo) throws IOException {
-      return Float.POSITIVE_INFINITY;
+      return maxScore;
     }
   }
 }
