@@ -76,6 +76,9 @@ Optimizations
 * GITHUB#14000: Speed up top-k retrieval of filtered disjunctions.
   (Adrien Grand)
 
+* GITHUB#13999: CombinedFieldQuery now returns non-infinite maximum scores,
+  making it eligible to dynamic pruning. (Adrien Grand)
+
 Bug Fixes
 ---------------------
 * GITHUB#13832: Fixed an issue where the DefaultPassageFormatter.format method did not format passages as intended
